test/fails/bad_parsing/bad_function7.lgl
int f(,int x, float y) { //Leading Comma
    return 0;
}

void main() {
    return;
}